@@ -15,19 +15,23 @@
 
 PCF = aap.pcf
 
-SRC = MyStorm.v      \
+TOP_SRC = MyStorm.v
+
+SRC = Debug.v        \
+      Execute.v      \
+      Fetch.v        \
       Memory.v       \
       MemorySmall.v  \
       RegisterFile.v \
-      Fetch.v        \
-      Execute.v      \
-      Debug.v        \
       UartRx.v       \
       UartTx.v
 
-HDR = aap.h
+HDR = aap.vh
 
-EXE_SRC = aap-main.cpp
+# FPGA bitstream
+
+.PHONY: fpga
+fpga: aap.bin
 
 aap.bin: aap.txt
 	icepack $^ $@
@@ -35,25 +39,16 @@ aap.bin: aap.txt
 aap.txt: $(PCF) aap.blif
 	arachne-pnr -m 20000 -d 8k -P tq144:4k -p $(PCF) aap.blif -o $@
 
-aap.blif: $(SRC) $(HDR)
-	yosys -q -p "synth_ice40 -blif $@" -p "stat" $(SRC)
+aap.blif: $(TOP_SRC) $(SRC) $(HDR)
+	yosys -q -p "synth_ice40 -blif $@" -p "stat" $(TOP_SRC) $(SRC)
 
 # Verilator lint
 
 .PHONY: lint
-lint: $(SRC) $(HDR)
-	verilator -Wall --lint-only $(SRC)
+lint: $(TOP_SRC) $(SRC) $(HDR)
+	verilator -Wall --lint-only $(TOP_SRC)
 
-# Verilator model. Turn off WIDTH warning, because Verilator gets this wrong
-# (or the standard is wrong) for parameters.
-
-.PHONY: verilator
-verilator: $(SRC) $(HDR) $(EXE_SRC)
-	verilator -Wno-WIDTH --trace --prefix VMyStorm -cc --exe \
-                  --top-module MyStorm $(SRC) $(EXE_SRC)
-	cd obj_dir; make -f VMyStorm.mk
 
 .PHONY: clean
 clean:
 	$(RM) -f aap.blif aap.txt aap.ex aap.bin
-	$(RM) -rf obj_dir
